// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageHeader pageHeader should not render blank dom 1`] = `
<div
  class="ezd-page-header ezd-page-header-ghost"
/>
`;

exports[`PageHeader pageHeader should render correctly int RTL direction 1`] = `
<div
  class="ezd-page-header ezd-page-header-ghost ezd-page-header-rtl"
>
  <div
    class="ezd-page-header-heading"
  >
    <div
      class="ezd-page-header-heading-left"
    >
      <span
        class="ezd-page-header-heading-title"
        title="Page Title"
      >
        Page Title
      </span>
    </div>
  </div>
</div>
`;

exports[`PageHeader pageHeader should support className 1`] = `
<div
  class="ezd-page-header not-works ezd-page-header-ghost"
>
  <div
    class="ezd-page-header-heading"
  >
    <div
      class="ezd-page-header-heading-left"
    >
      <span
        class="ezd-page-header-heading-title"
        title="Page Title"
      >
        Page Title
      </span>
    </div>
  </div>
</div>
`;

exports[`PageHeader rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ezd-page-header ezd-page-header-ghost ezd-page-header-rtl"
/>
`;
